[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scripts/Tile.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/Tile.png" type="Texture" id=2]

[sub_resource type="BoxShape" id=1]

[node name="Tile" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.125, 0, 0, 0, 0.5, 0.5, 0, -0.5 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 2.5, 0, 0, 0, -1.09278e-07, 1, 0, -2.5, -4.37114e-08, 0.5, 0.125, -0.5 )
opacity = 0.15
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Tile_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area_mouse_exited"]
